[package]
name = "fltk-grid"
version = "0.4.1"
edition = "2021"
description = "A grid widget for fltk-rs"
repository = "https://github.com/fltk-rs/fltk-grid"
documentation = "https://docs.rs/fltk-grid"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[dependencies]
fltk = "1.5.0"
